# student-life-env

./: .gitattributes  .gitignore  Dockerfile  README.md  client.py  debug_test.py  inference.py  learning_history.json  models.py  openenv.yaml  pace main --no-rebase  pyproject.toml  requirements.txt  server.py
app/: env.py  reward.py  tasks.py
grpo-model/: grpo_inference_v2.py
grpo-model/student-grpo-model/: README.md  adapter_config.json  adapter_model.safetensors  added_tokens.json  special_tokens_map.json  tokenizer_config.json
server/: app.py
