[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-life-env"
version = "1.0.0"
description = "Student Life Environment for RL"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "huggingface-hub>=0.22.0",
]

[project.scripts]
server = "server:main"

[project.scripts]
student-env-server = "server:app"


[project.dependencies]
openenv-core>=0.2.0

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]